General adjustments - Sync Heroku main
